# creative-factory-v2

./: .env.example  .gitignore  .prettierignore  .prettierrc.cjs  ARCHITECTURE_REFACTORING_SUMMARY.md  ARCHITECTURE_VERIFICATION.md  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  format.yml
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/src/creative_factory_api/: __init__.py  __main__.py  config.py  main.py
apps/api/src/creative_factory_api/routes/: __init__.py  health.py
apps/api/tests/: test_config.py  test_health.py  test_main_module.py
apps/web/: .env.example  Dockerfile  eslint.config.js  next.config.ts  package.json  tsconfig.json  vitest.config.ts
contracts/events/: .gitkeep  campaign-lifecycle-transitioned.schema.json  review-completed.schema.json
docs/: creative-ir-schema.json  creative-ir-specification.md  pipeline-overview.md  roadmap.md  sprint-10-qa-engine.md  sprint-11-asset-library.md  sprint-12-export-engine.md  sprint-13-analytics-engine.md  sprint-14-hardening.md  sprint-3-brand-engine.md  sprint-4-campaign-engine.md  sprint-5-creative-ir-compiler.md  sprint-6-review-engine.md  sprint-7-prompt-translation.md  sprint-8-image-generation.md  sprint-9-video-generation.md
docs/architecture/: .gitkeep  sprint-2-domain-contracts-workflow.md
docs/design/: README.md  database-design.md  target-architecture.md  ux-ui-spec.md
docs/examples/: analytics-dashboard-northwind.html  brand-package-acme.yaml  (+6 more)
infra/: README.md
scripts/: demo.mjs
(+6 files in other folders)
